zellij-integration-tests/tests/snapshots/panes__move_pane_down.snap
---
source: zellij-integration-tests/tests/panes.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
                                                         Pane #2
$ BBB█
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                         Pane #1
$ AAA
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
